v10/docs/ModelsCertificateStoreContainerListResponse.md
# ModelsCertificateStoreContainerListResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int64** |  | [optional] 
**Name** | Pointer to **string** |  | [optional] 
**OverwriteSchedules** | Pointer to **bool** |  | [optional] 
**Schedule** | Pointer to **string** |  | [optional] 
**CertStoreType** | Pointer to **int64** |  | [optional] 
**StoreCount** | Pointer to **int64** |  | [optional] 

## Methods

### NewModelsCertificateStoreContainerListResponse

`func NewModelsCertificateStoreContainerListResponse() *ModelsCertificateStoreContainerListResponse`

NewModelsCertificateStoreContainerListResponse instantiates a new ModelsCertificateStoreContainerListResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateStoreContainerListResponseWithDefaults

`func NewModelsCertificateStoreContainerListResponseWithDefaults() *ModelsCertificateStoreContainerListResponse`

NewModelsCertificateStoreContainerListResponseWithDefaults instantiates a new ModelsCertificateStoreContainerListResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateStoreContainerListResponse) GetId() int64`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateStoreContainerListResponse) GetIdOk() (*int64, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateStoreContainerListResponse) SetId(v int64)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateStoreContainerListResponse) HasId() bool`

HasId returns a boolean if a field has been set.

### GetName

`func (o *ModelsCertificateStoreContainerListResponse) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsCertificateStoreContainerListResponse) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsCertificateStoreContainerListResponse) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsCertificateStoreContainerListResponse) HasName() bool`

HasName returns a boolean if a field has been set.

### GetOverwriteSchedules

`func (o *ModelsCertificateStoreContainerListResponse) GetOverwriteSchedules() bool`

GetOverwriteSchedules returns the OverwriteSchedules field if non-nil, zero value otherwise.

### GetOverwriteSchedulesOk

`func (o *ModelsCertificateStoreContainerListResponse) GetOverwriteSchedulesOk() (*bool, bool)`

GetOverwriteSchedulesOk returns a tuple with the OverwriteSchedules field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOverwriteSchedules

`func (o *ModelsCertificateStoreContainerListResponse) SetOverwriteSchedules(v bool)`

SetOverwriteSchedules sets OverwriteSchedules field to given value.

### HasOverwriteSchedules

`func (o *ModelsCertificateStoreContainerListResponse) HasOverwriteSchedules() bool`

HasOverwriteSchedules returns a boolean if a field has been set.

### GetSchedule

`func (o *ModelsCertificateStoreContainerListResponse) GetSchedule() string`

GetSchedule returns the Schedule field if non-nil, zero value otherwise.

### GetScheduleOk

`func (o *ModelsCertificateStoreContainerListResponse) GetScheduleOk() (*string, bool)`

GetScheduleOk returns a tuple with the Schedule field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSchedule

`func (o *ModelsCertificateStoreContainerListResponse) SetSchedule(v string)`

SetSchedule sets Schedule field to given value.

### HasSchedule

`func (o *ModelsCertificateStoreContainerListResponse) HasSchedule() bool`

HasSchedule returns a boolean if a field has been set.

### GetCertStoreType

`func (o *ModelsCertificateStoreContainerListResponse) GetCertStoreType() int64`

GetCertStoreType returns the CertStoreType field if non-nil, zero value otherwise.

### GetCertStoreTypeOk

`func (o *ModelsCertificateStoreContainerListResponse) GetCertStoreTypeOk() (*int64, bool)`

GetCertStoreTypeOk returns a tuple with the CertStoreType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertStoreType

`func (o *ModelsCertificateStoreContainerListResponse) SetCertStoreType(v int64)`

SetCertStoreType sets CertStoreType field to given value.

### HasCertStoreType

`func (o *ModelsCertificateStoreContainerListResponse) HasCertStoreType() bool`

HasCertStoreType returns a boolean if a field has been set.

### GetStoreCount

`func (o *ModelsCertificateStoreContainerListResponse) GetStoreCount() int64`

GetStoreCount returns the StoreCount field if non-nil, zero value otherwise.

### GetStoreCountOk

`func (o *ModelsCertificateStoreContainerListResponse) GetStoreCountOk() (*int64, bool)`

GetStoreCountOk returns a tuple with the StoreCount field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreCount

`func (o *ModelsCertificateStoreContainerListResponse) SetStoreCount(v int64)`

SetStoreCount sets StoreCount field to given value.

### HasStoreCount

`func (o *ModelsCertificateStoreContainerListResponse) HasStoreCount() bool`

HasStoreCount returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


