v11/docs/ModelsCertificateStoreContainerListResponse.md
# ModelsCertificateStoreContainerListResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Name** | Pointer to **NullableString** |  | [optional] 
**OverwriteSchedules** | Pointer to **bool** |  | [optional] 
**Schedule** | Pointer to **NullableString** |  | [optional] 
**CertStoreType** | Pointer to **int32** |  | [optional] 
**StoreCount** | Pointer to **NullableInt32** |  | [optional] 

## Methods

### NewModelsCertificateStoreContainerListResponse

`func NewModelsCertificateStoreContainerListResponse() *ModelsCertificateStoreContainerListResponse`

NewModelsCertificateStoreContainerListResponse instantiates a new ModelsCertificateStoreContainerListResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateStoreContainerListResponseWithDefaults

`func NewModelsCertificateStoreContainerListResponseWithDefaults() *ModelsCertificateStoreContainerListResponse`

NewModelsCertificateStoreContainerListResponseWithDefaults instantiates a new ModelsCertificateStoreContainerListResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateStoreContainerListResponse) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateStoreContainerListResponse) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateStoreContainerListResponse) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateStoreContainerListResponse) HasId() bool`

HasId returns a boolean if a field has been set.

### GetName

`func (o *ModelsCertificateStoreContainerListResponse) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsCertificateStoreContainerListResponse) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsCertificateStoreContainerListResponse) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsCertificateStoreContainerListResponse) HasName() bool`

HasName returns a boolean if a field has been set.

### SetNameNil

`func (o *ModelsCertificateStoreContainerListResponse) SetNameNil(b bool)`

 SetNameNil sets the value for Name to be an explicit nil

### UnsetName
`func (o *ModelsCertificateStoreContainerListResponse) UnsetName()`

UnsetName ensures that no value is present for Name, not even an explicit nil
### GetOverwriteSchedules

`func (o *ModelsCertificateStoreContainerListResponse) GetOverwriteSchedules() bool`

GetOverwriteSchedules returns the OverwriteSchedules field if non-nil, zero value otherwise.

### GetOverwriteSchedulesOk

`func (o *ModelsCertificateStoreContainerListResponse) GetOverwriteSchedulesOk() (*bool, bool)`

GetOverwriteSchedulesOk returns a tuple with the OverwriteSchedules field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOverwriteSchedules

`func (o *ModelsCertificateStoreContainerListResponse) SetOverwriteSchedules(v bool)`

SetOverwriteSchedules sets OverwriteSchedules field to given value.

### HasOverwriteSchedules

`func (o *ModelsCertificateStoreContainerListResponse) HasOverwriteSchedules() bool`

HasOverwriteSchedules returns a boolean if a field has been set.

### GetSchedule

`func (o *ModelsCertificateStoreContainerListResponse) GetSchedule() string`

GetSchedule returns the Schedule field if non-nil, zero value otherwise.

### GetScheduleOk

`func (o *ModelsCertificateStoreContainerListResponse) GetScheduleOk() (*string, bool)`

GetScheduleOk returns a tuple with the Schedule field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSchedule

`func (o *ModelsCertificateStoreContainerListResponse) SetSchedule(v string)`

SetSchedule sets Schedule field to given value.

### HasSchedule

`func (o *ModelsCertificateStoreContainerListResponse) HasSchedule() bool`

HasSchedule returns a boolean if a field has been set.

### SetScheduleNil

`func (o *ModelsCertificateStoreContainerListResponse) SetScheduleNil(b bool)`

 SetScheduleNil sets the value for Schedule to be an explicit nil

### UnsetSchedule
`func (o *ModelsCertificateStoreContainerListResponse) UnsetSchedule()`

UnsetSchedule ensures that no value is present for Schedule, not even an explicit nil
### GetCertStoreType

`func (o *ModelsCertificateStoreContainerListResponse) GetCertStoreType() int32`

GetCertStoreType returns the CertStoreType field if non-nil, zero value otherwise.

### GetCertStoreTypeOk

`func (o *ModelsCertificateStoreContainerListResponse) GetCertStoreTypeOk() (*int32, bool)`

GetCertStoreTypeOk returns a tuple with the CertStoreType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertStoreType

`func (o *ModelsCertificateStoreContainerListResponse) SetCertStoreType(v int32)`

SetCertStoreType sets CertStoreType field to given value.

### HasCertStoreType

`func (o *ModelsCertificateStoreContainerListResponse) HasCertStoreType() bool`

HasCertStoreType returns a boolean if a field has been set.

### GetStoreCount

`func (o *ModelsCertificateStoreContainerListResponse) GetStoreCount() int32`

GetStoreCount returns the StoreCount field if non-nil, zero value otherwise.

### GetStoreCountOk

`func (o *ModelsCertificateStoreContainerListResponse) GetStoreCountOk() (*int32, bool)`

GetStoreCountOk returns a tuple with the StoreCount field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreCount

`func (o *ModelsCertificateStoreContainerListResponse) SetStoreCount(v int32)`

SetStoreCount sets StoreCount field to given value.

### HasStoreCount

`func (o *ModelsCertificateStoreContainerListResponse) HasStoreCount() bool`

HasStoreCount returns a boolean if a field has been set.

### SetStoreCountNil

`func (o *ModelsCertificateStoreContainerListResponse) SetStoreCountNil(b bool)`

 SetStoreCountNil sets the value for StoreCount to be an explicit nil

### UnsetStoreCount
`func (o *ModelsCertificateStoreContainerListResponse) UnsetStoreCount()`

UnsetStoreCount ensures that no value is present for StoreCount, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


